apps/openmrs/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: openmrs-prod
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: openmrs-prod
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
    name: mysql
